<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="app_id">51e76378</string>
    <string name="app_name">优客宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="present_integral">积分充值</string>
    <string name="present_integral_record">赠送记录</string>
    <string name="exchange_testing">兑换验证</string>
    <string name="scan_code">扫一扫</string>
    <string name="notification">恭喜你获得6积分</string>
    <string name="store_manager">店铺管理</string>
    <string name="market_manager">营销管理</string>
    <string name="integral_account_name">积分账户</string>
    <string name="cash_account_name">现金账户</string>
    <string name="phone_test_name">手机验证</string>
    <string name="integral_add_name">积分充值</string>
    <string name="apply_cash">申请提现</string>
    <string name="apply_cash_account">提现账户</string>
    <string name="menber_discount">会员折扣</string>
    <string name="password_setting">密码设置</string>
    <string name="service_telephone">客服电话</string>
    <string name="service_telephone_number">400-160-339</string>
    <string name="user_name_input_hint">手机号码/商家名称</string>
    <string name="login_password_input_hint">请输入登录密码</string>
    <string name="password_input_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="cannot_login">无法登录</string>
    <string name="apply_alliance">申请联盟</string>
    <string name="find_password">找回密码</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="account">账户</string>
    <string name="twc_code">扫一扫</string>
    <string name="msg_default_status">扫一扫验证二维码，即可兑换</string>
    <string name="security_code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="login_password">登录密码</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_password_confirm">确认密码</string>
    <string name="new_password_confirm_hint">请确认新密码</string>
    <string name="login_password_confirm">确认密码</string>
    <string name="login_password_confirm_hint">请确认登录密码</string>
    <string name="security_code_hint">请输入验证码</string>
    <string name="account_hint">手机号/邮箱</string>
    <string name="send_security_code">发送验证码</string>
    <string name="complete">完成</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_input_hint">请输入电话号码</string>
    <string name="agree_agreement">同意优积分商家联盟服务协议</string>
    <string name="integral_record">审核结果</string>
    <string name="cash_record">现金记录</string>
    <string name="change_reason">变动原因</string>
    <string name="date_record">日期</string>
    <string name="ask_confirm_exit">确定要退出吗？</string>
    <string name="confirm">确定</string>
    <string name="confirm_refund">确定退款</string>
    <string name="account_bank_name">开户行</string>
    <string name="account_bank_name_hint">请输入开户行</string>
    <string name="account_card_number">卡号</string>
    <string name="account_card_number_hint">请输入银行卡号</string>
    <string name="account_name_hint">请输入开户人姓名</string>
    <string name="account_name">开户人</string>
    <string name="business_name_title">商家名称</string>
    <string name="account_balance_title">账户余额</string>
    <string name="available_account_balance_title">可提余额</string>
    <string name="apply_cash_limits_hint">请输入提现金额，单笔提现不得低于5元</string>
    <string name="confirm_apply_cash">申请提现</string>
    <string name="balance_add">余额充值</string>
    <string name="cash_add">现金充值</string>
    <string name="add_money">充值金额</string>
    <string name="add_money_hint">请输入积分</string>
    <string name="unit_integral">积分</string>
    <string name="unit_money">元</string>
    <string name="need_pay">需支付</string>
    <string name="cash_account">现金账户</string>
    <string name="select_pay_type">选择支付方式</string>
    <string name="available_balance">可用余额</string>
    <string name="confirm_add">确认充值</string>
    <string name="confirm_pay">确认支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="cash_account_util">元</string>
    <string name="integral_account_util">积分</string>
    <string name="start_and_end_time">起始时间</string>
    <string name="time_to">至</string>
    <string name="order_money_title">订单金额</string>
    <string name="order_amount_title">订单笔数</string>
    <string name="turnover_title">成交金额</string>
    <string name="refund_money_title">退款金额</string>
    <string name="refund_money">退款</string>
    <string name="refund_money_amount_title">退款笔数</string>
    <string name="discount_income_title">折后实收</string>
    <string name="member_number_title">会员账号</string>
    <string name="member_number_title_hint">请输入会员手机号/卡号</string>
    <string name="member_nickname_title">会员昵称</string>
    <string name="comsume_money_title">消费金额</string>
    <string name="comsume_money_title_hint">请输入消费金额</string>
    <string name="exchange_testing_record">兑换记录</string>
    <string name="exchange_testing_input_hint">请输入验证码</string>
    <string name="search">查询</string>
    <string name="order">订单</string>
    <string name="order_type">订单类型</string>
    <string name="order_number">订单编号</string>
    <string name="settlement_price">结算价:</string>
    <string name="exchange_price">兑换价:</string>
    <string name="has_sold">已售:</string>
    <string name="stock_product">库存:</string>
    <string name="confirm_collect_money">确认收款</string>
    <string name="testing_success">验证成功</string>
    <string name="edit_product">编辑</string>
    <string name="down_product">下架</string>
    <string name="up_product">上架</string>
    <string name="delete_product">删除</string>
    <string name="confirm_delete">确认删除</string>
    <string name="exit">退出</string>
    <string name="save">保存</string>
    <string name="refund_hint">退款成功后，金额将退还给用户</string>
    <string name="add_notify">添加公告</string>
    <string name="notify_title">公告标题</string>
    <string name="shpoo_photos">上传店内图片</string>
    <string name="noProduct">暂无超值商品</string>
    <string name="store_deal">《商家服务协议》</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="register_title">注册账户</string>
    <string name="card_customer_userule">1.适用范围：本优惠券全场通用.\n2.本优惠券不设找零，不兑换现金.\n3.请在有效期内使用，过期作废.</string>
    <string name="redpacket_rule">每人领到的金额随机(1≤红包个数≤总积分)</string>
    <string name="withdrawals_hint" >500及以上的提现金额不收手续费</string>
    <string name="withdrawals_context">500以下提现金额需收取5元的手续费，手续费在提现金额中扣取</string>
    <string name="payRecord_detail_service_money">服务费:(实付金额-免服务费金额)*1%</string>
    <string name="bankActivity_button_text">绑定银行卡</string>
    <string name="finacia_real_income_detail_title">实收详情</string>
    <string name="finacia_real_income_detail_see">查看</string>
    <string name="finacia_real_income_detail_orderNum">合计订单笔数</string>
    <string name="finacia_real_income_detail_orderMoney">订单金额</string>
    <string name="finacia_real_income_detail_realMoney">实收净额</string>
    <string name="finacia_exchange_record_font">兑换记录</string>
    <string name="finacia_payMoney_rule">结算金额：超值兑换订单结算价合计金额</string>
    <string name="finacia_real_income_rule">实收净额：折后实收+不参与折扣金额</string>
    <string name="finacia_real_income_rule2">实收净额：实付金额-服务费</string>
    <string name="finacia_service_money_rule">服务费：(实付金额-不参与优惠金额)*1%</string>
    <string name="finacia_discount_order">会员折扣订单</string>
    <string name="finacia_discount_order_money">订单金额</string>
    <string name="finacia_discount_order_money_notDiscount">不参与折扣金额</string>
    <string name="finacia_discount_order_money_discount">折扣金额</string>
    <string name="finacia_discount_order_realMoney">折后实收</string>
    <string name="finacia_card_orderInfo_realMoney">实收金额</string>
    <string name="finacia_card_orderInfo_notServiceMoney">免服务费金额</string>
    <string name="finacia_card_orderInfo_serviceMoney">服务费</string>
    <string name="finacia_card_orderNum">卡劵优惠订单</string>
    <string name="finacia_exchange_order">超值兑换订单</string>
    <string name="finacia_exchange_settlement_amount">结算金额</string>
    <string name="lan_vip_context">当前账号为普通商户，请升级成为VIP商户，开通揽客功能。</string>
    <string name="lan_vip_function">VIP商户功能说明</string>
    <string name="lan_vip_text_openVip1">开通vip商户</string>
    <string name="lan_vip_text_openVip2">12个月</string>
    <string name="lan_vip_text_openVip3">支付方式</string>
    <string name="lan_vip_text_openVip4">现金支付</string>
    <string name="lan_vip_text_openVip5">微信支付</string>
    <string name="lan_vip_text_openVip6">支付宝支付</string>
    <string name="lan_vip_text_openVip7">确认支付</string>
    <string name="lan_vip_recharge_success">恭喜您</string>
    <string name="lan_vip_recharge_success1">成为VIP商家，获得尊贵特权！</string>
    <string name="withdrawals_sure">交易确认</string>
    <string name="withdrawals_sure1">确认</string>
    <string name="withdrawals_sure2">取消</string>
    <string name="red_packets_advertisement_hint">随机推送给周边会员</string>
    <string name="red_packets_advertisement_button_content">发红包</string>
    <string name="card_advertisement_hint">同步推送给本店会员</string>
    <string name="card_advertisement_button_hint">立即发送</string>
    <string name="card_advertisement_title">代金券预览</string>
</resources>
