<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 找回密码标题栏 -->

    <include layout="@layout/include_title_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical">

            <!-- 账户名输入 -->

            <LinearLayout
                android:id="@+id/ll_account_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_account_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_weight="2"
                    android:text="@string/account"
                    android:textColor="#9C9C9C"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_account_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@null"
                    android:hint="请输入手机号"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 验证码输入 -->

            <LinearLayout
                android:id="@+id/ll_security_code_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/y1"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_security_code_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_weight="2"
                    android:text="@string/security_code"
                    android:textColor="#9C9C9C"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_security_code_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/security_code_hint"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_send_security_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/bg_send_security_code"
                    android:text="@string/send_security_code"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- 新密码输入 -->

            <LinearLayout
                android:id="@+id/ll_new_password_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/y20"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_new_password_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_weight="2"
                    android:text="@string/new_password"
                    android:textColor="#9C9C9C"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_new_password_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@null"
                    android:hint="@string/new_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 确认新密码输入 -->

            <LinearLayout
                android:id="@+id/ll_confirm_password_input"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/y1"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_confirm_password_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_weight="2"
                    android:text="@string/new_password_confirm"
                    android:textColor="#9C9C9C"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_confirm_password_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@null"
                    android:hint="@string/new_password_confirm_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_complete_find_password"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/x20"
                android:layout_weight="1"
                android:background="@drawable/bg_send_security_code"
                android:text="@string/complete"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>