<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <!-- 修改密码标题栏 -->

    <include layout="@layout/include_title_bar_layout" />

    <!-- 账户名输入 -->


    <!-- 旧密码输入 -->

    <LinearLayout
        android:id="@+id/ll_old_passwdInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y1"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/x10" >

        <TextView
            android:id="@+id/tv_old_passwdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x5"
            android:layout_weight="2"
            android:text="密码"
            android:textColor="#9C9C9C"
            android:textSize="16sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_old_passwdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 新密码输入 -->

    <LinearLayout
        android:id="@+id/ll_new_passwdInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/x10" >

        <TextView
            android:id="@+id/tv_new_passwdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x5"
            android:layout_weight="2"
            android:text="@string/new_password"
            android:textColor="#9C9C9C"
            android:textSize="16sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_new_passwdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 确认新密码输入 -->

    <LinearLayout
        android:id="@+id/ll_confirm_passwdInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/x10" >

        <TextView
            android:id="@+id/tv_confirm_passwdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x5"
            android:layout_weight="2"
            android:text="@string/new_password_confirm"
            android:textColor="#9C9C9C"
            android:textSize="16sp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/et_confirm_passwdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/new_password_confirm_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_complete_setting_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y20"
        android:background="@drawable/bg_send_security_code"
        android:text="@string/complete"
        android:textColor="@color/white" />

</LinearLayout>